[build] Update Maven config and dependencies